--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,9 @@
-@import url("//fonts.googleapis.com/earlyaccess/jejumyeongjo.css");
+@import url(//fonts.googleapis.com/earlyaccess/jejumyeongjo.css);
+@font-face { font-family: 'MapoGoldenPier'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/MapoGoldenPierA.woff') format('woff'); font-weight: normal; font-style: normal; }
 
 body {
-    font-family: 'Jeju Myeongjo', serif;
+ 
+     font-family: 'MapoGoldenPier','Jeju Myeongjo', serif;;
     font-size: 25px;
     color: #899f64;
 }
