--- a/css/main.css
+++ b/css/main.css
@@ -238,7 +238,12 @@ body {
 .calT > p:nth-of-type(2) {
     margin-top: 20px;
 }
-
+.d-day{
+    background-color:  #899f64;
+ color: white;
+    border-radius: 50px;
+ 
+}
 #map {
     margin: 40px auto;
     width: 80%;
